fix: add-item-requests Внесены изменения